WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181794
[css-align] The 'baseline' value must be invalid for the 'justify-content' property
https://bugs.webkit.org/show_bug.cgi?id=181794
Summary
[css-align] The 'baseline' value must be invalid for the 'justify-content' pr...
Javier Fernandez
Reported
2018-01-18 04:32:54 PST
The CSS WG has resolved to drop the 'baseline' value from the 'justify-content' property's syntax.
https://github.com/w3c/csswg-drafts/issues/1184#issuecomment-295144365
Attachments
Patch
(164.59 KB, patch)
2018-01-25 00:56 PST
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Patch
(167.93 KB, patch)
2018-01-29 06:18 PST
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-sierra
(2.19 MB, application/zip)
2018-01-29 07:19 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews107 for mac-sierra-wk2
(2.54 MB, application/zip)
2018-01-29 07:24 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews114 for mac-sierra
(2.93 MB, application/zip)
2018-01-29 07:43 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews122 for ios-simulator-wk2
(2.15 MB, application/zip)
2018-01-29 07:48 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews204 for win-future
(11.55 MB, application/zip)
2018-01-29 10:27 PST
,
EWS Watchlist
no flags
Details
Patch
(184.11 KB, patch)
2018-01-29 12:37 PST
,
Javier Fernandez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(7)
View All
Add attachment
proposed patch, testcase, etc.
Javier Fernandez
Comment 1
2018-01-25 00:56:27 PST
Created
attachment 332236
[details]
Patch
Javier Fernandez
Comment 2
2018-01-29 06:18:24 PST
Created
attachment 332536
[details]
Patch
EWS Watchlist
Comment 3
2018-01-29 07:19:08 PST
Comment on
attachment 332536
[details]
Patch
Attachment 332536
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/6248880
New failing tests: css3/parse-place-content.html css3/parse-align-content.html css3/parse-justify-content.html
EWS Watchlist
Comment 4
2018-01-29 07:19:09 PST
Created
attachment 332538
[details]
Archive of layout-test-results from ews101 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 5
2018-01-29 07:24:35 PST
Comment on
attachment 332536
[details]
Patch
Attachment 332536
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/6248885
New failing tests: css3/parse-place-content.html css3/parse-align-content.html css3/parse-justify-content.html
EWS Watchlist
Comment 6
2018-01-29 07:24:36 PST
Created
attachment 332539
[details]
Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 7
2018-01-29 07:43:02 PST
Comment on
attachment 332536
[details]
Patch
Attachment 332536
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/6248906
New failing tests: css3/parse-place-content.html css3/parse-align-content.html css3/parse-justify-content.html
EWS Watchlist
Comment 8
2018-01-29 07:43:03 PST
Created
attachment 332540
[details]
Archive of layout-test-results from ews114 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 9
2018-01-29 07:48:16 PST
Comment on
attachment 332536
[details]
Patch
Attachment 332536
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/6248908
New failing tests: css3/parse-place-content.html css3/parse-align-content.html css3/parse-justify-content.html
EWS Watchlist
Comment 10
2018-01-29 07:48:17 PST
Created
attachment 332541
[details]
Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 11
2018-01-29 10:27:29 PST
Comment on
attachment 332536
[details]
Patch
Attachment 332536
[details]
did not pass win-ews (win): Output:
http://webkit-queues.webkit.org/results/6250058
New failing tests: css3/parse-place-content.html css3/parse-align-content.html css3/parse-justify-content.html
EWS Watchlist
Comment 12
2018-01-29 10:27:39 PST
Created
attachment 332552
[details]
Archive of layout-test-results from ews204 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews204 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Javier Fernandez
Comment 13
2018-01-29 12:37:27 PST
Created
attachment 332570
[details]
Patch
Antti Koivisto
Comment 14
2018-01-30 07:20:00 PST
Comment on
attachment 332570
[details]
Patch r=me
WebKit Commit Bot
Comment 15
2018-01-30 08:03:20 PST
Comment on
attachment 332570
[details]
Patch Clearing flags on attachment: 332570 Committed
r227786
: <
https://trac.webkit.org/changeset/227786
>
WebKit Commit Bot
Comment 16
2018-01-30 08:03:21 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 17
2018-01-30 08:05:42 PST
<
rdar://problem/37028881
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug