[css-align] The 'baseline' value must be invalid for the 'justify-content' property https://bugs.webkit.org/show_bug.cgi?id=181794

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

Adapted the test cases using <baseline-position> keywords to the new CSS syntax.
Imported the CSS/support folder.

* resources/import-expectations.json:
* web-platform-tests/css/css-align/content-distribution/parse-align-content-001-expected.txt:
* web-platform-tests/css/css-align/content-distribution/parse-align-content-001.html:
* web-platform-tests/css/css-align/content-distribution/parse-align-content-003-expected.txt:
* web-platform-tests/css/css-align/content-distribution/parse-align-content-003.html:
* web-platform-tests/css/css-align/content-distribution/parse-justify-content-001-expected.txt:
* web-platform-tests/css/css-align/content-distribution/parse-justify-content-001.html:
* web-platform-tests/css/css-align/content-distribution/parse-justify-content-003-expected.txt:
* web-platform-tests/css/css-align/content-distribution/parse-justify-content-003.html:
* web-platform-tests/css/css-align/content-distribution/parse-justify-content-004-expected.txt:
* web-platform-tests/css/css-align/content-distribution/parse-justify-content-004.html:
* web-platform-tests/css/css-align/content-distribution/place-content-shorthand-001-expected.txt:
* web-platform-tests/css/css-align/content-distribution/place-content-shorthand-001.html:
* web-platform-tests/css/css-align/content-distribution/place-content-shorthand-002-expected.txt:
* web-platform-tests/css/css-align/content-distribution/place-content-shorthand-002.html:
* web-platform-tests/css/css-align/content-distribution/place-content-shorthand-004-expected.txt:
* web-platform-tests/css/css-align/content-distribution/place-content-shorthand-004.html:
* web-platform-tests/css/css-align/content-distribution/place-content-shorthand-006-expected.txt:
* web-platform-tests/css/css-align/content-distribution/place-content-shorthand-006.html:
* web-platform-tests/css/css-align/default-alignment/parse-align-items-001-expected.txt:
* web-platform-tests/css/css-align/default-alignment/parse-align-items-001.html:
* web-platform-tests/css/css-align/default-alignment/parse-align-items-003-expected.txt:
* web-platform-tests/css/css-align/default-alignment/parse-align-items-003.html:
* web-platform-tests/css/css-align/default-alignment/parse-justify-items-001-expected.txt:
* web-platform-tests/css/css-align/default-alignment/parse-justify-items-001.html:
* web-platform-tests/css/css-align/default-alignment/parse-justify-items-003-expected.txt:
* web-platform-tests/css/css-align/default-alignment/parse-justify-items-003.html:
* web-platform-tests/css/css-align/default-alignment/place-items-shorthand-001.html:
* web-platform-tests/css/css-align/default-alignment/place-items-shorthand-002.html:
* web-platform-tests/css/css-align/default-alignment/place-items-shorthand-004.html:
* web-platform-tests/css/css-align/default-alignment/place-items-shorthand-006.html:
* web-platform-tests/css/css-align/resources/alignment-parsing-utils.js:
(checkPlaceShorhand):
(checkPlaceShorhandLonghands):
* web-platform-tests/css/css-align/self-alignment/parse-align-self-001-expected.txt:
* web-platform-tests/css/css-align/self-alignment/parse-align-self-001.html:
* web-platform-tests/css/css-align/self-alignment/parse-align-self-003-expected.txt:
* web-platform-tests/css/css-align/self-alignment/parse-align-self-003.html:
* web-platform-tests/css/css-align/self-alignment/parse-justify-self-001-expected.txt:
* web-platform-tests/css/css-align/self-alignment/parse-justify-self-001.html:
* web-platform-tests/css/css-align/self-alignment/parse-justify-self-003-expected.txt:
* web-platform-tests/css/css-align/self-alignment/parse-justify-self-003.html:
* web-platform-tests/css/css-align/self-alignment/place-self-shorthand-001.html:
* web-platform-tests/css/css-align/self-alignment/place-self-shorthand-002.html:
* web-platform-tests/css/css-align/self-alignment/place-self-shorthand-004.html:
* web-platform-tests/css/css-align/self-alignment/place-self-shorthand-006.html:
* web-platform-tests/css/support/1x1-green.png: Added.
* web-platform-tests/css/support/1x1-lime.png: Added.
* web-platform-tests/css/support/1x1-maroon.png: Added.
* web-platform-tests/css/support/1x1-navy.png: Added.
* web-platform-tests/css/support/1x1-red.png: Added.
* web-platform-tests/css/support/1x1-white.png: Added.
* web-platform-tests/css/support/60x60-gg-rr.png: Added.
* web-platform-tests/css/support/60x60-green.png: Added.
* web-platform-tests/css/support/60x60-red.png: Added.
* web-platform-tests/css/support/OWNERS: Added.
* web-platform-tests/css/support/README: Added.
* web-platform-tests/css/support/a-green.css: Added.
(.a):
* web-platform-tests/css/support/alignment.css: Added.
(.alignSelfAuto):
(.alignSelfNormal):
(.alignSelfStretch):
(.alignSelfStart):
(.alignSelfEnd):
(.alignSelfCenter):
(.alignSelfRight):
(.alignSelfLeft):
(.alignSelfFlexStart):
(.alignSelfFlexEnd):
(.alignSelfSelfStart):
(.alignSelfSelfEnd):
(.alignSelfSafeCenter):
(.alignSelfUnsafeCenter):
(.alignSelfSafeEnd):
(.alignSelfUnsafeEnd):
(.alignSelfSafeSelfEnd):
(.alignSelfUnsafeSelfEnd):
(.alignSelfSafeSelfStart):
(.alignSelfUnsafeSelfStart):
(.alignSelfSafeRight):
(.alignSelfUnsafeRight):
(.alignSelfSafeLeft):
(.alignSelfUnsafeLeft):
(.alignSelfSafeFlexEnd):
(.alignSelfUnsafeFlexEnd):
(.alignSelfSafeFlexStart):
(.alignSelfUnsafeFlexStart):
(.alignSelfBaseline):
(.alignSelfFirstBaseline):
(.alignSelfLastBaseline):
(.alignItemsAuto):
(.alignItemsNormal):
(.alignItemsStretch):
(.alignItemsStart):
(.alignItemsCenter):
(.alignItemsEnd):
(.alignItemsLeft):
(.alignItemsRight):
(.alignItemsFlexStart):
(.alignItemsFlexEnd):
(.alignItemsSelfStart):
(.alignItemsSelfEnd):
(.alignItemsSafeCenter):
(.alignItemsUnsafeCenter):
(.alignItemsSafeEnd):
(.alignItemsUnsafeEnd):
(.alignItemsSafeSelfEnd):
(.alignItemsUnsafeSelfEnd):
(.alignItemsSafeSelfStart):
(.alignItemsUnsafeSelfStart):
(.alignItemsSafeRight):
(.alignItemsUnsafeRight):
(.alignItemsSafeLeft):
(.alignItemsUnsafeLeft):
(.alignItemsSafeFlexEnd):
(.alignItemsUnsafeFlexEnd):
(.alignItemsSafeFlexStart):
(.alignItemsUnsafeFlexStart):
(.alignItemsBaseline):
(.alignItemsFirstBaseline):
(.alignItemsLastBaseline):
(.alignContentBaseline):
(.alignContentLastBaseline):
(.alignContentStart):
(.alignContentEnd):
(.alignContentCenter):
(.alignContentLeft):
(.alignContentRight):
(.alignContentFlexStart):
(.alignContentFlexEnd):
(.alignContentSpaceBetween):
(.alignContentSpaceAround):
(.alignContentSpaceEvenly):
(.alignContentStretch):
(.alignContentSafeCenter):
(.alignContentUnsafeCenter):
(.alignContentSafeEnd):
(.alignContentUnsafeEnd):
(.alignContentSafeRight):
(.alignContentUnsafeRight):
(.alignContentSafeLeft):
(.alignContentUnsafeLeft):
(.alignContentSafeFlexEnd):
(.alignContentUnsafeFlexEnd):
(.alignContentSafeFlexStart):
(.alignContentUnsafeFlexStart):
(.alignContentFirstBaseline):
(.justifySelfAuto):
(.justifySelfNormal):
(.justifySelfStretch):
(.justifySelfStart):
(.justifySelfCenter):
(.justifySelfEnd):
(.justifySelfRight):
(.justifySelfLeft):
(.justifySelfFlexStart):
(.justifySelfFlexEnd):
(.justifySelfSelfStart):
(.justifySelfSelfEnd):
(.justifySelfSafeCenter):
(.justifySelfUnsafeCenter):
(.justifySelfSafeEnd):
(.justifySelfUnsafeEnd):
(.justifySelfSafeSelfEnd):
(.justifySelfUnsafeSelfEnd):
(.justifySelfSafeSelfStart):
(.justifySelfUnsafeSelfStart):
(.justifySelfSafeRight):
(.justifySelfUnsafeRight):
(.justifySelfSafeLeft):
(.justifySelfUnsafeLeft):
(.justifySelfSafeFlexEnd):
(.justifySelfUnsafeFlexEnd):
(.justifySelfSafeFlexStart):
(.justifySelfUnsafeFlexStart):
(.justifySelfBaseline):
(.justifySelfFirstBaseline):
(.justifySelfLastBaseline):
(.justifyItemsAuto):
(.justifyItemsNormal):
(.justifyItemsStretch):
(.justifyItemsStart):
(.justifyItemsCenter):
(.justifyItemsEnd):
(.justifyItemsLeft):
(.justifyItemsRight):
(.justifyItemsFlexStart):
(.justifyItemsFlexEnd):
(.justifyItemsSelfStart):
(.justifyItemsSelfEnd):
(.justifyItemsLegacy):
(.justifyItemsLegacyLeft):
(.justifyItemsLegacyCenter):
(.justifyItemsLegacyRight):
(.justifyItemsLeftLegacy):
(.justifyItemsCenterLegacy):
(.justifyItemsRightLegacy):
(.justifyItemsSafeCenter):
(.justifyItemsUnsafeCenter):
(.justifyItemsSafeEnd):
(.justifyItemsUnsafeEnd):
(.justifyItemsSafeSelfEnd):
(.justifyItemsUnsafeSelfEnd):
(.justifyItemsSafeSelfStart):
(.justifyItemsUnsafeSelfStart):
(.justifyItemsSafeRight):
(.justifyItemsUnsafeRight):
(.justifyItemsSafeLeft):
(.justifyItemsUnsafeLeft):
(.justifyItemsSafeFlexEnd):
(.justifyItemsUnsafeFlexEnd):
(.justifyItemsSafeFlexStart):
(.justifyItemsUnsafeFlexStart):
(.justifyItemsTest):
(.justifyItemsBaseline):
(.justifyItemsFirstBaseline):
(.justifyItemsLastBaseline):
(.justifyContentBaseline):
(.justifyContentLastBaseline):
(.justifyContentStart):
(.justifyContentEnd):
(.justifyContentCenter):
(.justifyContentLeft):
(.justifyContentRight):
(.justifyContentFlexStart):
(.justifyContentFlexEnd):
(.justifyContentSpaceBetween):
(.justifyContentSpaceAround):
(.justifyContentSpaceEvenly):
(.justifyContentStretch):
(.justifyContentSafeCenter):
(.justifyContentUnsafeCenter):
(.justifyContentSafeEnd):
(.justifyContentUnsafeEnd):
(.justifyContentSafeRight):
(.justifyContentUnsafeRight):
(.justifyContentSafeLeft):
(.justifyContentUnsafeLeft):
(.justifyContentSafeFlexEnd):
(.justifyContentUnsafeFlexEnd):
(.justifyContentSafeFlexStart):
(.justifyContentUnsafeFlexStart):
(.justifyContentFirstBaseline):
(.itemsNormal):
(.itemsStretch):
(.itemsStart):
(.itemsCenter):
(.itemsEnd):
(.itemsLeft):
(.itemsRight):
(.itemsSelfStart):
(.itemsSelfEnd):
(.itemsBaseline):
(.selfStretch):
(.selfStart):
(.selfEnd):
(.selfCenter):
(.selfRight):
(.selfLeft):
(.selfSelfStart):
(.selfSelfEnd):
(.selfBaseline):
(.contentStart):
(.contentCenter):
(.contentEnd):
(.contentCenterSafe):
(.contentCenterUnsafe):
(.contentEndSafe):
(.contentEndUnsafe):
(.contentSpaceBetween):
(.contentSpaceAround):
(.contentSpaceEvenly):
(.contentStretch):
* web-platform-tests/css/support/b-green.css: Added.
(.b):
* web-platform-tests/css/support/c-red.css: Added.
(.c):
* web-platform-tests/css/support/cat.png: Added.
* web-platform-tests/css/support/green.ico: Added.
* web-platform-tests/css/support/import-green.css: Added.
(.import):
* web-platform-tests/css/support/import-red.css: Added.
(.import):
* web-platform-tests/css/support/pattern-grg-rgr-grg.png: Added.
* web-platform-tests/css/support/pattern-grg-rrg-rgg.png: Added.
* web-platform-tests/css/support/pattern-rgr-grg-rgr.png: Added.
* web-platform-tests/css/support/pattern-tr.png: Added.
* web-platform-tests/css/support/red.ico: Added.
* web-platform-tests/css/support/ruler-h-50%.png: Added.
* web-platform-tests/css/support/ruler-h-50px.png: Added.
* web-platform-tests/css/support/ruler-v-100px.png: Added.
* web-platform-tests/css/support/ruler-v-50px.png: Added.
* web-platform-tests/css/support/square-purple.png: Added.
* web-platform-tests/css/support/square-teal.png: Added.
* web-platform-tests/css/support/square-white.png: Added.
* web-platform-tests/css/support/support/README: Added.
* web-platform-tests/css/support/support/swatch-green.png: Added.
* web-platform-tests/css/support/support/swatch-red.png: Added.
* web-platform-tests/css/support/support/w3c-import.log: Added.
* web-platform-tests/css/support/swatch-blue.png: Added.
* web-platform-tests/css/support/swatch-green.png: Added.
* web-platform-tests/css/support/swatch-lime.png: Added.
* web-platform-tests/css/support/swatch-orange.png: Added.
* web-platform-tests/css/support/swatch-red.png: Added.
* web-platform-tests/css/support/swatch-teal.png: Added.
* web-platform-tests/css/support/swatch-white.png: Added.
* web-platform-tests/css/support/swatch-yellow.png: Added.
* web-platform-tests/css/support/test-bl.png: Added.
* web-platform-tests/css/support/test-br.png: Added.
* web-platform-tests/css/support/test-inner-half-size.png: Added.
* web-platform-tests/css/support/test-outer.png: Added.
* web-platform-tests/css/support/test-tl.png: Added.
* web-platform-tests/css/support/test-tr.png: Added.
* web-platform-tests/css/support/w3c-import.log: Added.

Source/WebCore:

The CSS WG has resolved that it doesn't make sense to define Baseline
Content-Alignment in the inline/main axis.

https://github.com/w3c/csswg-drafts/issues/1184

The spec has been updated so that <baseline-postion> is not valid for
the 'justify-content' property's syntax. This CL updates our parsing
logic to match the new spec, including the parsing logic of the
place-content shorthand.

Additionally, this CL updates the computed value of the
<baseline-position> values to match other browsers.

We don't implement support for <baseline-position> values in the
Content Distribution properties (align-content and justify-content),
so I don't expect this change to break content of sites using the CSS
Box Alignment feature.

No new tests, just adapt the Web Platform Tests we already have to the new CSS syntax.

* css/parser/CSSPropertyParser.cpp:
(WebCore::getBaselineKeyword):
(WebCore::consumeBaselineKeyword):
(WebCore::consumeContentDistributionOverflowPosition):
(WebCore::consumeSelfPositionOverflowPosition):
(WebCore::CSSPropertyParser::parseSingleValue):
(WebCore::consumeSimplifiedContentPosition):
(WebCore::CSSPropertyParser::consumePlaceContentShorthand):
(WebCore::consumeSimplifiedItemPosition):


Canonical link: https://commits.webkit.org/198092@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227786 268f45cc-cd09-0410-ab3c-d52691b4dbfc